Added the CI build for Java 26